--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,11 @@ test = [
     "pytest-django>=4.5",
     "pytest-cov>=4.0",
 ]
+docs = [
+    "sphinx>=7.0",
+    "sphinx-rtd-theme>=2.0",
+    "sphinx-autodoc-typehints>=1.24",
+]
 
 [project.urls]
 Homepage = "https://github.com/howieweiner/django-htmx-tools"
