chore: linting and formatting fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,6 +112,8 @@ sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLD
 [tool.ruff]
 target-version = "py310"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -126,7 +128,7 @@ ignore = [
     "B008",  # do not perform function calls in argument defaults
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
 [tool.mypy]
@@ -137,6 +139,12 @@ warn_unused_ignores = true
 warn_redundant_casts = true
 warn_unused_configs = true
 plugins = ["mypy_django_plugin.main"]
+exclude = [
+    "^example/",
+    "^docs/",
+    "^build/",
+    "^dist/",
+]
 
 [tool.django-stubs]
 django_settings_module = "tests.settings"
