--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,8 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
       - id: check-merge-conflict
+      - id: no-commit-to-branch
+        args: [--branch, main]
 
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v4.1.0
