--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,13 +15,15 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
-        django-version: ["4.2", "5.0", "5.1"]
+        django-version: ["4.2", "5.0", "5.1", "6.0"]
         exclude:
           # Django 5.0+ requires Python 3.10+
           - python-version: "3.10"
             django-version: "5.0"
           - python-version: "3.10"
             django-version: "5.1"
+          - python-version: "3.10"
+            django-version: "6.0"
 
     steps:
     - uses: actions/checkout@v4
